[project]
name = "fiar"
version = "0.1.0"
authors = [{ name = "UFABC Dojo Members" }, { name = "Diogo F. S. Ramos" }]
description = "Four in a Row Game"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["argparse >= 1.4.0"]

[tool.ruff]
extend-select = [
    "F",
    "E",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    # "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    # "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = ["ANN101", "ERA001", "E501", "D205", "D212", "RET505"]
show-fixes = true
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
